--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,14 @@
 poops:
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
+  date: 2019-02-18
+  link: https://publicpool.kinja.com/subject-travel-pool-2-golf-1832699274
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2019-02-17
+  link: https://publicpool.kinja.com/subject-travel-pool-7-back-to-the-club-1832691012
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
   date: 2019-02-16
   link: https://twitter.com/jiveDurkey/status/1096780133611028480
 - location: Mar a Lago
