--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,14 @@
 poops:
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
+  date: 2019-03-09
+  link: https://publicpool.kinja.com/subject-travel-pool-2-1833174603
+- location: Mar a Lago
+  city: Palm Beach, Florida
+  date: 2019-03-08
+  link: https://www.palmbeachpost.com/photogallery/LK/20190309/NEWS/308009990/PH/1
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
   date: 2019-02-18
   link: https://publicpool.kinja.com/subject-travel-pool-2-golf-1832699274
 - location: Trump International Golf Club
