another florida poop

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,10 @@
 poops:
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
+  date: 2019-03-10
+  link: https://twitter.com/kylegriffin1/status/1104731150239625222
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
   date: 2019-03-09
   link: https://publicpool.kinja.com/subject-travel-pool-2-1833174603
 - location: Mar a Lago
