got caught up on March poops

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,30 @@
 poops:
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
+  date: 2019-03-31
+  link: https://thegolfnewsnet.com/golfnewsnetteam/2019/03/31/donald-trump-visited-the-golf-course-for-the-178th-time-as-president-112757/
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2019-03-30
+  link: https://www.palmbeachpost.com/news/20190330/trump-in-palm-beach-president-back-at-mar-a-lago-after-six-hours-at-golf-club
+- location: Mar a Lago
+  city: Palm Beach, Florida
+  date: 2019-03-29
+  link: https://factba.se/transcript/donald-trump-press-conference-mcmahon-resignation-sba-march-29-2019
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2019-03-24
+  link: https://www.palmbeachpost.com/news/20190324/trump-in-palm-beach-president-claims-mueller-offers-total-exoneration
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2019-03-23
+  link: https://www.palmbeachdailynews.com/photogallery/LK/20190326/NEWS/326009997/PH/1
+- location: Mar a Lago
+  city: Palm Beach, Florida
+  date: 2019-03-22
+  link: https://www.cbsnews.com/news/trump-meets-with-caribbean-leaders-at-mar-a-lago-today-2019-03-22-live-updates/
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
   date: 2019-03-10
   link: https://twitter.com/kylegriffin1/status/1104731150239625222
 - location: Trump International Golf Club
