--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,12 @@
 poops:
+- location: Trump International Hotel
+  city: Las Vegas, Nevada
+  date: 2019-04-06
+  link: https://publicpool.kinja.com/subject-wh-travel-pool-report-2-1833860539
+- location: Trump International Hotel
+  city: Las Vegas, Nevada
+  date: 2019-04-05
+  link: https://publicpool.kinja.com/subject-wh-travel-pool-report-27-lid-1833856159
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
   date: 2019-03-31
