surprise Los Angeles poop I missed

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -7,6 +7,10 @@ poops:
   city: Las Vegas, Nevada
   date: 2019-04-05
   link: https://publicpool.kinja.com/subject-wh-travel-pool-report-27-lid-1833856159
+- location: Trump National Golf Club 
+  city: Rancho Palos Verdes, California
+  date: 2019-04-05
+  link: https://www.latimes.com/local/lanow/la-me-trump-palos-verdes-stop-20190405-story.html
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
   date: 2019-03-31
