added easter pooping

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,20 @@
 poops:
+- location: Mar a Lago
+  city: Palm Beach, Florida
+  date: 2019-04-21
+  link: https://www.instagram.com/p/BwhULQynfM4/?utm_source=ig_web_copy_link
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2019-04-20
+  link: https://twitter.com/markknoller/status/1119322091218771968
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2019-04-19
+  link: https://twitter.com/markknoller/status/1119236461440708608
+- location: Mar a Lago
+  city: Palm Beach, Florida
+  date: 2019-04-18
+  link: https://www.instagram.com/p/BwarD6XFJbT/
 - location: Trump National Golf Course
   city: Potomac Falls, Virginia
   date: 2019-04-14
