all the May poops

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,37 @@
 poops:
+- 
+- location: Trump International Hotel
+  city: Washington DC
+  date: 2019-05-22
+  link: https://twitter.com/KFaulders/status/1131345678737788933?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1131345678737788933&ref_url=https%3A%2F%2Fhillreporter.com%2Fwilliam-barr-dines-at-trump-dc-hotel-while-president-is-also-there-36865
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-05-19
+  link: https://publicpool.kinja.com/subject-pool-report-2-sterling-arrival-1834873361
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-05-18
+  link: https://publicpool.kinja.com/subject-pool-report-3-1834863347
+- location: Trump Tower
+  city: New York City
+  date: 2019-05-15
+  link: https://www.ny1.com/nyc/all-boroughs/politics/2019/05/16/donald-trump-to-make-overnight-stay-in-new-york-city
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-05-11
+  link: https://thegolfnewsnet.com/golfnewsnetteam/2019/05/11/donald-trump-visited-the-golf-course-for-the-188th-time-as-president-113267/
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-05-04
+  link: https://thegolfnewsnet.com/golfnewsnetteam/2019/05/05/donald-trump-visited-the-golf-course-for-the-187th-time-as-president-113212/
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-04-28
+  link: https://publicpool.kinja.com/subject-in-town-pool-report-2-arrival-at-trump-club-1834362652
+- location: Trump National Golf Course 
+  city: Potomac Falls, Virginia 
+  date: 2019-04-27
+  link: https://www.japantimes.co.jp/news/2019/04/18/national/abe-trump-talk-april-26-washington-followed-golf-melanias-birthday-celebrations/
 - location: Mar a Lago
   city: Palm Beach, Florida
   date: 2019-04-21
