finally got caught up from the summer

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,196 @@
 poops:
+- location: Trump Tower
+  city: New York City
+  date: 2019-09-26
+  link: 
+- location: Trump Tower
+  city: New York City
+  date: 2019-09-25
+  link: 
+- location: Trump Tower
+  city: New York City
+  date: 2019-09-24
+  link: 
+- location: Trump Tower
+  city: New York City
+  date: 2019-09-23
+  link: 
+- location: Trump Tower
+  city: New York City
+  date: 2019-09-22
+  link: 
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-09-21
+  link: 
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-09-15
+  link: 
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-09-14
+  link: 
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-09-08
+  link: 
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-09-07
+  link: 
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-09-02
+  link: 
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-08-31
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-08-18
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-08-17
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-08-16
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-08-15
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-08-14
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-08-13
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-08-12
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-08-11
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-08-10
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-08-09
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-08-04
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-08-03
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-08-02
+  link: 
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-07-28
+  link: 
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-07-27
+  link: 
+- location: Trump International Hotel
+  city: Washington DC
+  date: 2019-07-26
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-07-21
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-07-20
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-07-19
+  link: 
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-07-14
+  link: 
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-07-13
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-07-07
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-07-06
+  link: 
+- location: Trump National Golf Course
+  city: Bedminster, New Jersey
+  date: 2019-07-05
+  link: 
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-07-04
+  link: 
+- location: Trump International Hotel
+  city: Washington DC
+  date: 2019-06-25
+  link: 
+- location: Trump National Doral Miami
+  city: Doral, Florida
+  date: 2019-06-19
+  link: 
+- location: Trump National Doral Miami
+  city: Doral, Florida
+  date: 2019-06-18
+  link: 
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-06-16
+  link: 
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-06-15
+  link: 
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-06-09
+  link: 
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-06-08
+  link: 
+- location: Trump International Golf Links and Hotel Ireland
+  city: Doonbeg, Ireland
+  date: 2019-06-07
+  link:  
+- location: Trump International Golf Links and Hotel Ireland
+  city: Doonbeg, Ireland
+  date: 2019-06-06
+  link: 
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-06-02
+  link: 
+- location: Trump National Golf Course
+  city: Potomac Falls, Virginia
+  date: 2019-06-01
+  link: 
 - location: Trump International Hotel
   city: Washington DC
   date: 2019-05-22
