--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -183,6 +183,10 @@ poops:
   city: Doonbeg, Ireland
   date: 2019-06-06
   link: 
+- location: Trump International Golf Links and Hotel Ireland
+  city: Doonbeg, Ireland
+  date: 2019-06-05
+  link: 
 - location: Trump National Golf Course
   city: Potomac Falls, Virginia
   date: 2019-06-02
